compiles with java 24